2002-12-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h:
  - Add warning about not all queries allowing cursors to go backwards
 test/test19.cxx, test/test22.cxx, test/test38.cxx, test/test40.cxx,
 test/test41.cxx:
  - Use events table for cursor test to circumvent trouble with pg_tables in
    postgres 7.3 (has become a view, so cursors don't go backwards)
 test/test5.cxx, test/test24.cxx:
  - Insert some extra rows in events so cursor tests will work
2002-12-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cachedresult.h:
  - Added cautionary comment about limitations in PostgreSQL
2002-12-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac, src/cursor.cxx, src/robusttransaction.cxx, src/transaction.cxx:
  - Removed DIALECT_POSTGRESQL setting
2002-12-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.h:
  - Fixed missing PGSTD:: qualification for std::exception
2002-12-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac:
  - Test for presence of PQescapeString()
 include/pqxx/util.h:
  - Fixed Quote() for outlandish characters.  Thanks Bada.
2002-12-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac, test/test23.cxx, test/test4.cxx:
  - Not only test for <sys/select.h>, but also see if it works--thanks Rod 
    Taylor for feedback, testing, and facilities.
2002-12-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cachedresult.cxx:
  - Fixed cursor position bug when size was even multiple of granularity
 test/test41.cxx:
  - New
2002-12-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cachedresult.h:
  - Implemented empty()
  - Added m_Lower
  - clear() no longer forgets size information, just flushes cache
 src/cachedresult.h:
  - Simplified binary search logic using m_Lower
  - Removed special case (-1 for unknown) from m_Upper
  - No longer rely on m_Cache to provide highest known-to-exist block
2002-12-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cursor.cxx: